--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logoblanco.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff">
+    <meta name="google" content="notranslate">
     <link rel="manifest" href="/manifest.webmanifest">
     <title>Tiendia</title>
   </head>
